--- a/app/views/components/_navbar-home.html.erb
+++ b/app/views/components/_navbar-home.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-transparent navbar-expand-sm navbar-light d-flex justify-content-between">
+<div class="navbar bg-white navbar-expand-sm navbar-light d-flex justify-content-between">
 
   <div class="navbar-home">
     <%= link_to root_path, class: "navbar-brand" do %>
