--- a/app/views/roadmaps/show.html.erb
+++ b/app/views/roadmaps/show.html.erb
@@ -1,11 +1,11 @@
 <div class="show-container">
   <%= render 'columns/vision' %>
   <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
-    <div class="columns">
+    <div class="columns" id="<%= @roadmap.id %>">
     <!-- Si connecté & sur sa roadmap -->
       <%= render 'columns/column_admin' %>
       <div class="new-theme">
-        <%= simple_form_for @new_theme, url: roadmap_themes_path(@roadmap), method: :post, remote: true do |f| %>
+        <%= simple_form_for @new_theme, url: roadmap_themes_path(@roadmap), method: :post do |f| %>
           <% if @themes.first.nil? %>
             <%= f.button :submit, "+ Crée ton premier thème", class: "btn btn-white create-theme" %>
           <% else %>
