yay proper ajax, need img and it's ok

--- a/app/views/columns/_column_admin.html.erb
+++ b/app/views/columns/_column_admin.html.erb
@@ -1,8 +1,8 @@
-<div class="columns admin" id="<%= @roadmap.id %>">
+<div class="columns admin" style="display: none" id="<%= @roadmap.id %>">
   <% @themes.each do |theme| %>
     <div class="column-roadmap" id="<%= theme.id %>">
       <!-- Theme -->
-      <%= simple_form_for theme, url: roadmap_theme_path(id: theme.id, roadmap_id: @roadmap.id) do |f| %>
+      <%= simple_form_for theme, remote: true, url: roadmap_theme_path(id: theme.id, roadmap_id: @roadmap.id) do |f| %>
       <div class="theme">
         <%= f.input :temporality, label: false, input_html: {value: theme.temporality, class: "theme-temporality", id: "temporality-#{theme.id}"} %>
         <div class="column-content">
