--- a/app/assets/stylesheets/components/_vision.scss
+++ b/app/assets/stylesheets/components/_vision.scss
@@ -30,6 +30,7 @@
   box-shadow: none;
   min-height: 41px;
   margin-bottom: 0;
+  min-height: 80px;
 }
 
 .vision-container .form-group input:hover, .vision-container .form-group input:focus,
