--- a/app/views/columns/_column_admin.html.erb
+++ b/app/views/columns/_column_admin.html.erb
@@ -1,4 +1,4 @@
-<div class="columns admin" style="display: none" id="<%= @roadmap.id %>">
+<div class="columns admin" id="<%= @roadmap.id %>">
   <% @themes.each do |theme| %>
     <div class="column-roadmap" id="<%= theme.id %>">
       <!-- Theme -->
