--- a/app/views/columns/_column_admin_kpis.html.erb
+++ b/app/views/columns/_column_admin_kpis.html.erb
@@ -6,7 +6,7 @@
   <!-- Index/Update/Destroy Kpis -->
   <div class="kpis-list">
    <% theme.kpis.order(created_at: :desc).each do |kpi| %>
-      <%= simple_form_for kpi, remote: true, url: roadmap_theme_kpi_path(id: kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id), method: :patch do |f| %>
+      <%= simple_form_for kpi, remote: true, url: roadmap_theme_kpi_path(id: kpi.id, theme_id: theme.id, roadmap_id: @roadmap.id) do |f| %>
         <div class="kpi" id="<%= kpi.id %>">
           <div class="kpi-emoji">
             <%= image_tag "target.png", class: "emoji" %>
