--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,22 @@
 <div class="home-container home-container1">
   <div class="home-content home-content1 zi-2">
-    <div class="map zi-2">
+    <!-- <div class="map zi-2">
       <div class="bg-map">
         <%= image_tag "dot.svg", class: "map-dot" %>
         <%= image_tag "position.svg", class: "map-position" %>
       </div>
-    </div>
+    </div> -->
     <div class="home-baseline">
         <h1>Dites adieu aux <br><span id="typed"></span></h1>
-        <h3>Avec <strong>fellowmap</strong>, créez une roadmap <u>sexy</u> 🕶️ et <u>compréhensible</u> 💡 pour votre entreprise. Communiquez votre vision facilement et notifiez vos collègues en un clic.</p>
+        <h2>Créez et partagez une roadmap sexy 🕶️ et compréhensible 💡</h2>
     </div>
     <div class="home-cta">
       <% if @roadmaps.last.nil? && user_signed_in? %>
-        <%= render 'components/button_link.html.erb', text: "C'est parti", link: new_roadmap_path, class: "btn-white btn-landing" %>
+        <%= render 'components/button_link.html.erb', text: "Accéder aux roadmaps", link: new_roadmap_path, class: "btn-white btn-landing" %>
       <% elsif user_signed_in? %>
-        <%= render 'components/button_link.html.erb', text: "C'est parti", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
+        <%= render 'components/button_link.html.erb', text: "Accéder aux roadmaps", link: roadmap_path(@roadmaps.last.id), class: "btn-white btn-landing" %>
       <% else %>
-        <%= render 'components/button_link.html.erb', text: "Connexion", link: new_user_session_path, class: "btn-white btn-landing" %>
+        <%= render 'components/button_link.html.erb', text: "S'inscrire", link: new_user_session_path, class: "btn-white btn-landing" %>
       <% end %>
     </div>
   </div>
@@ -24,13 +24,12 @@
 
 <div class="home-container home-container2">
   <div class="home-content home-content2">
-    <div id="home-roadmap-admin"><%= image_tag "home-example.png" %></div>
+    <div id="home-roadmap-admin"><%= image_tag "home-example.jpg" %></div>
     <div id="home-roadmap-preview" style="display: none;"><%= image_tag "home-example2.png" %></div>
     <h2>Créez votre roadmap facilement</h2>
-    <h3>Créez, priorisez, et éditez votre roadmap grâce à un des éditeurs les plus fluides, pensés pour les Product Managers.
-      <div style="padding-top:10px;"><a style="color: #FFB906;" id="home-preview">Prévisualisez le résultat à tout instant. 👆</a></div>
-    </h3>
+    <h3>Créez, priorisez, et éditez votre roadmap grâce à un des éditeurs les plus fluides, pensés pour les Product Managers.</h3>
   </div>
+  <hr style="border-color: white; max-width: 560px;">
 </div>
 
 <div class="home-container home-container3">
@@ -45,23 +44,23 @@
 
 <div class="home-container home-container4">
   <div class="home-content home-content4">
-    <h2>Construisez de la meilleure des manières</h2>
+    <h2>Faites commes les pros</h2>
     <div class="home-cards">
       <div class="home-card">
-        <h3>🔭 Vision</h3>
-        <p>Fellowmap vous apprend à communiquer une vision claire dans votre entreprise. Montrez là où vous souhaitez emmener votre produit !</p>
+        <h3>🔭</h3><h3>Vision</h3>
+        <p>Fellowmap vous apprend à communiquer une vision claire dans votre entreprise. Le monde comprendra plus facilement là où vous allez.</p>
       </div>
       <div class="home-card">
-        <h3>📅 Priorisation</h3>
-        <p>Choisissez et modifiez quand vous le souhaitez votre priorisation dans le temps. Ne vous sentez pas obligé d'y préciser une date !</p>
+        <h3>📅</h3><h3>Priorisation</h3>
+        <p>Priorisez par thème et objectif business: Fellowmap est tout sauf un calendrier.</p>
       </div>
       <div class="home-card">
-        <h3>🎯 Objectifs business</h3>
-        <p>Inscrivez des objectifs clairs pour montrer à vos équipes pourquoi il faut mener ces efforts. Montrez à vos dirigeants que vous travaillez pour que le produit soit rentable.</p>
+        <h3>🎯</h3><h3>Objectifs business</h3>
+        <p>Inscrivez des objectifs clairs pour montrer à vos équipes pourquoi il faut mener ces efforts.</p>
       </div>
       <div class="home-card">
-        <h3>💬 Communication</h3>
-        <p>Sortez avec une roadmap claire qui vous permet de communiquer votre stratégie produit, sans effort. Expliquez à vos collègues comment vous allez accomplir votre vision.</p>
+        <h3>💬</h3><h3>Communication</h3>
+        <p>Sortez une roadmap claire et communiquez votre stratégie produit sans effort. Partagez la publiquement, ou pas.</p>
       </div>
     </div>
   </div>
