--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,56 +1,56 @@
-.map {
-  height: 220px;
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
-}
+// .map {
+//   height: 220px;
+//   display: flex;
+//   align-items: center;
+//   margin-top: 40px;
+// }
 
-.bg-map {
-  position: relative;
-  background-image: image-url('map.svg');
-  width: 190px;
-  height: 152px;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
+// .bg-map {
+//   position: relative;
+//   background-image: image-url('map.svg');
+//   width: 190px;
+//   height: 152px;
+//   background-repeat: no-repeat;
+//   background-size: contain;
+// }
 
-.map-dot {
-  position: absolute;
-  width: 35px;
-  bottom: 34px;
-  left: 38px;
-  animation-name: map-dot;
-  animation-delay: 0s;
-  animation-duration: 6s;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-}
+// .map-dot {
+//   position: absolute;
+//   width: 35px;
+//   bottom: 34px;
+//   left: 38px;
+//   animation-name: map-dot;
+//   animation-delay: 0s;
+//   animation-duration: 6s;
+//   animation-direction: alternate;
+//   animation-iteration-count: infinite;
+// }
 
-.map-position {
-  position: absolute;
-  right: 23px;
-  bottom: 114px;
-  animation-name: map-position;
-  animation-delay: 6s;
-  animation-duration: 12s;
-  animation-iteration-count: infinite;
-  height: 63px;
-}
+// .map-position {
+//   position: absolute;
+//   right: 23px;
+//   bottom: 114px;
+//   animation-name: map-position;
+//   animation-delay: 6s;
+//   animation-duration: 12s;
+//   animation-iteration-count: infinite;
+//   height: 63px;
+// }
 
-@keyframes map-dot {
-  0%   {bottom: 36px; left: 32px;}
-  15%  {bottom: 44px; left: 60px;}
-  32%  {bottom: 86px; left: 43px;}
-  47% {bottom: 76px; left: 78px;}
-  65% {bottom: 49px; left: 97px;}
-  75% {bottom: 65px; left: 105px;}
-  90% {bottom: 72px; left: 120px;}
-  100% {bottom: 87px; left: 120px;}
-}
+// @keyframes map-dot {
+//   0%   {bottom: 36px; left: 32px;}
+//   15%  {bottom: 44px; left: 60px;}
+//   32%  {bottom: 86px; left: 43px;}
+//   47% {bottom: 76px; left: 78px;}
+//   65% {bottom: 49px; left: 97px;}
+//   75% {bottom: 65px; left: 105px;}
+//   90% {bottom: 72px; left: 120px;}
+//   100% {bottom: 87px; left: 120px;}
+// }
 
-@keyframes map-position {
-  0%   {height: 63px;}
-  12%   {height: 83px;}
-  25% {height: 63px;}
-  100% {height: 63px;}
-}
+// @keyframes map-position {
+//   0%   {height: 63px;}
+//   12%   {height: 83px;}
+//   25% {height: 63px;}
+//   100% {height: 63px;}
+// }
