--- a/app/assets/stylesheets/components/_typos.scss
+++ b/app/assets/stylesheets/components/_typos.scss
@@ -5,27 +5,38 @@ h1 {
   padding-bottom: 15px;
 }
 
-.home-content h1 {
-  font-size: 2rem;
-  line-height: 37px;
+h2 {
+  font-size: 20px;
+  line-height: 27px;
+  font-weight: bold;
 }
 
-@media(max-width:415px) {
-  .home-content h1 {
-    font-size: 2rem;
-    line-height: 37px;
-  }
-  .home-content h2 {
-    font-size: 1rem;
-    line-height: 26px;
-  }
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+  word-wrap: break-word;
+  white-space: pre-line;
+}
+
+.home-content h1 {
+  font-size: 3rem;
+  line-height: 70px;
 }
 
 .home-content h2 {
   font-weight: bold;
   margin: 0 auto;
-  font-size: 26px;
+  font-size: 30px;
   margin-bottom: 15px;
+  line-height: 36px;
+}
+
+.home-baseline h2 {
+  font-weight: normal;
 }
 
 .home-content1 h3 {
@@ -42,21 +53,20 @@ h1 {
   margin: 0;
 }
 
-h2 {
-  font-size: 20px;
-  line-height: 27px;
+.home-card h3 {
   font-weight: bold;
+  margin-bottom: 20px;
 }
 
-h3 {
-  font-size: 16px;
-  font-weight: bold;
-}
-
-p {
-  font-size: 14px;
-  word-wrap: break-word;
-  white-space: pre-line;
+@media(max-width:415px) {
+  .home-content h1 {
+    font-size: 2rem;
+    line-height: 37px;
+  }
+  .home-content h2 {
+    font-size: 1.5rem;
+    line-height: 30px;
+  }
 }
 
 a, .devise-links a {
