--- a/app/assets/stylesheets/pages/_roadmaps.scss
+++ b/app/assets/stylesheets/pages/_roadmaps.scss
@@ -13,14 +13,14 @@
   font-size: 14px;
 }
 
-.roadmap-logo {
+.roadmap-logo, .roadmap-logo-preview {
   color: black;
   display: flex;
   justify-content: flex-end;
   height: 100%;
 }
 
-.roadmap-logo img {
+.roadmap-logo img, .roadmap-logo-preview img {
   max-height: 100%;
   height: auto;
   height: 100%;
