textare elastic after ajax

--- a/app/views/improvements/create.js.erb
+++ b/app/views/improvements/create.js.erb
@@ -1,1 +1,2 @@
 $("#newimpr-<%= @theme.id %>").after("<%= j render partial: 'improvement', locals: { theme: @theme, improvement: @new_improvement } %>");
+$("textarea").elastic();
