--- a/app/views/columns/_vision.html.erb
+++ b/app/views/columns/_vision.html.erb
@@ -43,7 +43,7 @@
   </div>
   <!-- Vision guest -->
 <% else %>
-  <div class="vision vision-preview">
+  <div class="vision vision-container vision-preview">
     <div class="vision-form">
       <h2>Notre vision</h2>
       <p><%= @roadmap.vision %></p>
