--- a/app/views/columns/_column_guest.html.erb
+++ b/app/views/columns/_column_guest.html.erb
@@ -1,4 +1,4 @@
-<div class="columns guest" style="display:none;" id="<%= @roadmap.id %>">
+<div class="columns guest" id="<%= @roadmap.id %>">
   <% @themes.each do |theme| %>
     <% if !current_user.nil? && Roadmap.where(user_id: current_user.id).map(&:id).include?(params[:id].to_i) %>
     <div class="column-roadmap preview-guest">
